refactor and update file structure

--- a/frontend-react/public/index.html
+++ b/frontend-react/public/index.html
@@ -23,6 +23,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@nmfretz" />
+    <meta property="twitter:domain" content="https://whoopsiederpies.netlify.app/" />
+
+    <meta name="twitter:title" content="Whoopsie Derpies NFT" />
+    <meta
+      name="twitter:description"
+      content="Whoopsie Derpies is an NFT art collection deployed to the Ethereum Rinkeby Testnet. Inspired by drawing animals for our twin toddlers whilst getting bumped around and receiving conflicting requests. The animals are cute and just a little bit derpy."
+    />
+    <meta
+      name="twitter:image"
+      content="https://user-images.githubusercontent.com/85373263/158004698-ad21d9ce-04ca-4d17-86e9-e489921653f1.png"
+    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Shizuru&display=swap" rel="stylesheet" />
