--- a/frontend-react/public/index.html
+++ b/frontend-react/public/index.html
@@ -24,23 +24,23 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:creator" content="@nmfretz" />
-    <meta property="twitter:domain" content="https://whoopsiederpies.netlify.app/" />
+    <meta name="twitter:creator" content="" />
+    <meta property="twitter:domain" content="" />
 
-    <meta name="twitter:title" content="Whoopsie Derpies NFT" />
+    <meta name="twitter:title" content="Project NFT" />
     <meta
       name="twitter:description"
-      content="Whoopsie Derpies is an NFT art collection deployed to the Ethereum Rinkeby Testnet. Inspired by drawing animals for our twin toddlers whilst getting bumped around and receiving conflicting requests. The animals are cute and just a little bit derpy."
+      content="Project description"
     />
     <meta
       name="twitter:image"
-      content="https://user-images.githubusercontent.com/85373263/158004698-ad21d9ce-04ca-4d17-86e9-e489921653f1.png"
+      content=""
     />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Shizuru&display=swap" rel="stylesheet" />
-    <title>Whoopsie Derpies</title>
+    <title>Project NFT</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
