--- a/frontend-react/public/index.html
+++ b/frontend-react/public/index.html
@@ -27,7 +27,7 @@
     <meta name="twitter:creator" content="@" />
     <meta property="twitter:domain" content="#" />
 
-    <meta name="twitter:title" content="Project Name NFT" />
+    <meta name="twitter:title" content="Myster Box NFT" />
     <meta
       name="twitter:description"
       content="Project Description"
@@ -40,7 +40,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
-    <title>Project Name</title>
+    <title>Myster Box</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
